--- a/package.json
+++ b/package.json
@@ -18,5 +18,8 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18"
-  }
+  },
+  "cacheDirectories": [
+    ".next/cache/"
+  ]
 }
