--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "framer-motion": "^11.3.0",
     "gsap": "^3.12.5",
+    "lottie": "^0.0.1",
     "next": "14.2.4",
     "react": "^18",
     "react-dom": "^18",
