--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.52.1",
+    "styled-components": "^6.1.11",
     "zustand": "^4.5.4"
   },
   "devDependencies": {
