--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.2.6",
     "@tanstack/react-query": "^5.50.1",
     "framer-motion": "^11.3.0",
     "gsap": "^3.12.5",
