--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
+    "@mui/material": "^5.16.0",
     "@reduxjs/toolkit": "^2.2.6",
     "@tanstack/react-query": "^5.50.1",
     "framer-motion": "^11.3.0",
